--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title>JGDESINFECCIONES</title>
   </head>
   <body>
    
     <!-- INICIA NAV========================== -->
     <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
         <div class="container-fluid">
-          <a class="navbar-brand info" href="index.html">JGDESINFECCIONES</a>
+          <a class="navbar-brand " href="index.html "> <img src="img/logo.png" alt="" w-100></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -57,13 +57,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/img/nino-maghradze-ASNgnX6Jr5M-unsplash.jpg" class="d-block w-100" alt="...">
+        <img src="img/carrousel_uno.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/img/kelly-sikkema-xp-ND7NjWaA-unsplash.jpg" class="d-block w-100" alt="...">
+        <img src="img/carrousel_dos.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/img/unplash3.jpg" class="d-block w-100" alt="...">
+        <img src="img/unplash3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -118,20 +118,20 @@
 <div class="container py-4">
   <section class="main row bg-ligth ">
       <article class="col-xs-12 col-sm-4 col-md-9 col-lg py-5 ">
-         <a href=""><img src="/img/limpieza de tanques icono.png" alt="" class="w-50"></a>  
+         <a href=""><img src="img/limpieza de tanques icono.png" alt="" class="w-50"></a>  
           <h6>  Limpieza de tanques </h6>
       </article>
       <article class="col-xs-12 col-sm-4 col-md-3 col-lg py-3">
-       <a href="">  <img src="/img/control de plagas icono.png" alt="" class="w-50"></a>   
+       <a href="">  <img src="img/control de plagas icono.png" alt="" class="w-50"></a>   
           <h6>  Control de plagas </h6>
       </article>
       <article class="col-xs-12 col-sm-8 col-md-9 col-lg py-3">
-     <a href=""> <img src="/img/seguridad contra incendios logo.png" alt="" class="w-50"></a>    
+     <a href=""> <img src="img/seguridad contra incendios logo.png" alt="" class="w-50"></a>    
          <h6> seguridad contra incendios </h6>
       </article>
   
       <article class="col-xs-12  col-sm-8 col-md-9 col-lg py-3">
-      <a href=""><img src="/img/limpieza profunda icono.png" alt="" class="w-50"></a>   
+      <a href=""><img src="img/limpieza profunda icono.png" alt="" class="w-50"></a>   
           <h6> Limpieza profunda </h6>
   
       </article>
