--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -12,13 +12,13 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Hello, world!</title>
+    <title>limpieza de tanques</title>
   </head>
   <body>
     <!-- INICIA NAV========================== -->
     <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">JGDESINFECCIONES</a>
+        <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -100,7 +100,7 @@
         </div>
 
         <div class="col-md-5 px-4 py-4">
-          <img src="/img/Limpieza de tanques.jpg" alt="" />
+          <img src="img/Limpieza de tanques.jpg" alt="" />
         </div>
       </div>
 
