--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title>contacto</title>
   </head>
   <body>
     <!-- INICIA NAV========================== -->
