--- a/control-de-plagas.html
+++ b/control-de-plagas.html
@@ -8,13 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
      <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title>control de plagas</title>
   </head>
   <body>
    <!-- INICIA NAV========================== -->
    <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">JGDESINFECCIONES</a>
+      <a class="navbar-brand" href="#"> <img src="img/logo.png" alt=""> </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,7 +52,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-5 px-4 py-5">
-  <img src="/img/control de plagas.jpg" alt="" class="w-100">
+  <img src="img/control de plagas.jpg" alt="" class="w-100">
 </div>
 <div class="col-md-7 px-4 py-5">
 <h3>Que es una plaga</h3>
@@ -64,22 +64,22 @@
    <div class="col-md-3 ">
      <h2>Hormigas</h2>
      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum aut assumenda illum nihil, ullam magnam accusamus veniam at earum, minima recusandae ipsum corrupti tenetur eligendi maiores molestiae. Inventore, non officiis?</p>
-     <img src="/img/hormigas.jpg" alt="" class=" w-100 h-60">
+     <img src="img/hormigas.jpg" alt="" class=" w-100 h-60">
    </div>
    <div class="col-md-3  ">
     <h2>Cucarachas</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias blanditiis praesentium, nostrum pariatur porro dolore commodi, dicta quaerat repellendus vitae aperiam dolor repudiandae qui ullam similique. Sapiente quas delectus soluta?</p>
-    <img src="/img/cucarachas 2.jpg" alt="" class="w-100 h-60">
+    <img src="img/cucarachas 2.jpg"" class="w-100 h-60">
    </div>
    <div class="col-md-3   "> 
      <h2>Alacranes</h2>
      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis blanditiis error autem consequatur impedit distinctio architecto inventore dolor ut voluptate ea ab dolores, voluptas nostrum nemo praesentium. Soluta, asperiores perspiciatis!
-     <img src="/img/alacranes.jpg" alt="" class="w-100   -1">
+     <img src="img/alacranes.jpg" alt="" class="w-100   -1">
    </div>
    <div class="col-md-3  ">
    <h2>Murcielagos</h2>
    <p class="parrafo"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam ipsum ab fugit illo delectus possimus harum molestias expedita laudantium? Qui itaque officiis in doloribus exercitationem nulla numquam quo dicta sint?</p>
-   <img src="/img/murcielagos.jpg" alt="" class="w-100">
+   <img src="img/murcielagos.jpg" alt="" class="w-100">
    </div>
  </div>
 
