--- a/empresa.html
+++ b/empresa.html
@@ -8,13 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title>empresa</title>
   </head>
   <body>
  <!-- INICIA NAV========================== -->
  <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">JGDESINFECCIONES</a>
+      <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,7 +54,7 @@
     Su crecimiento durante los últimos años la sitúa como un referente a nivel nacional en el sector, actuando como socio colaborador de entidades y organismos importantes en sectores como la Industria alimentaria, restauración y hostelería, administración pública, telecomunicaciones, entidades financieras y el resto del amplio espectro empresarial nacional.</p>
 </div>
 <div class="col-md-4">
-  <img src="/img/jgdesinfecciones.jpg" alt="" class="img_empresa">
+  <img src="img/jgdesinfecciones.jpg" alt="" class="img_empresa">
 </div>
 
 </div>
