--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -8,13 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title>fumigaciones</title>
   </head>
   <body>
    <!-- INICIA NAV========================== -->
    <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">JGDESINFECCIONES</a>
+      <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -52,7 +52,7 @@
 
    <h2 class="titulo_fumigacion">FUMIGACION</h2>
   <div class="col-md-7 px-5"> 
-  <img src="/img/desinfectar.jpg" alt="">
+  <img src="img/desinfectar.jpg" alt="">
   </div>
 
 
