--- a/control-de-plagas.html
+++ b/control-de-plagas.html
@@ -7,10 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="css/pruebacss.css">
     <title>control de plagas</title>
   </head>
   <body>
+
+
    <!-- INICIA NAV========================== -->
    <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
     <div class="container-fluid">
@@ -49,54 +51,78 @@
 <!-- TERMINA NAV================================= -->
 
 
+<!-- 1RA SECTION?==================================================================== -->
 <div class="container">
-<div class="row">
-<div class="col-md-5 px-4 py-5">
-  <img src="img/control de plagas.jpg" alt="" class="w-100">
-</div>
-<div class="col-md-7 px-4 py-5">
-<h3>Que es una plaga</h3>
-  <p>Actualmente debe situarse al mismo nivel que el concepto de enfermedad de forma que debe entenderse como plaga a una situación en la cual un animal produce daños económicos, normalmente físicos, a intereses de las personas (salud, plantas cultivadas, animales domésticos, materiales o medios naturales); de la misma forma que la enfermedad no es el virus, bacteria, etc., sino la situación en la que un organismo vivo (patógeno) ocasiona alteraciones fisiológicas en otro, normalmente con síntomas visibles o daños económicos.</p>
-</div>
+  <div class="row py-4 border-bottom ">
+
+    <div class="col-md-6">
+      <img src="img/control de plagas.jpg" alt="" class="w-100 border border-dark">
+    </div>
+
+    <div class="col-md-6">
+      
+      <h2 class="titulo_principal_plagas">Que es una plaga</h2>
+         <p class="parrafo_principal_plagas">Se llama plaga a cualquier ser vivo que resulta perjudicial para otro ser vivo, generalmente cuando este es de interés para el ser humano. Existen plagas de interés sanitario, tales como los vectores de enfermedades humanas — y animales, tales como, mosquitos, pulgas o garrapatas, y las plagas agrícolas que afectan las plantas cultivadas, así como las cosechas, ya sean frescas o almacenadas.</p>
+    </div>
+
+
+
+
+
+  </div>
+
+  
+
+  
 </div>
 
- <div class="row border-top py-4">
-   <div class="col-md-3 ">
-    <div class="card" style="width: 18rem;">
-      <img src="img/hormigas.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-   </div>
-   <div class="col-md-3  ">
-    <div class="card" style="width: 18rem;">
-      <img src="img/cucarachas 2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-   </div>
-   <div class="col-md-3   "> 
-    <div class="card" style="width: 18rem;">
-      <img src="img/alacranes.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-   </div>
-   <div class="col-md-3  ">
-    <div class="card" style="width: 18rem;">
-      <img src="img/murcielagos.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-    </div>
-   </div>
- </div>
+<!-- 2DA SECTION================================================================== -->
+<div class="container">
+<div class="row ">
+<article class="col-md-7 px-5">
+  <h4>Hormigas</h4>
+  <img src="img/hormigas.jpg" alt="">
+</article>
+<div class="col-md-5 py-5 px-5">
+  <p class="parrafos_plagas">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eius eos modi, quisquam excepturi ut labore consequuntur et pariatur, debitis ullam velit quod voluptates perspiciatis. Qui rerum placeat possimus corrupti.</p>
+</div>
+
+</div>
+<div class="row px-5">
+<article class="col-md-7">
+  <h4>Cucarachas</h4>
+  <img src="img/cucarachas 2.jpg" alt="">
+</article>
+<div class="col-md-5">
+  <p class="parrafos_plagas">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eius eos modi, quisquam excepturi ut labore consequuntur et pariatur, debitis ullam velit quod voluptates perspiciatis. Qui rerum placeat possimus corrupti.</p>
+
+</div>
+</div>
+<div class="row px-5">
+  <article class="col-md-7">
+  <h4>Alcranes</h4>
+  <img src="img/alacranes.jpg" alt="">
+  </article>
+  <div class="col-md-5">
+  <p class="parrafos_plagas">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eius eos modi, quisquam excepturi ut labore consequuntur et pariatur, debitis ullam velit quod voluptates perspiciatis. Qui rerum placeat possimus corrupti.</p>
+
+  </div>
+</div>
+<div class="row px-5">
+  <article class="col-md-7">
+  <h4>Murcielagos</h4>
+  <img src="img/murcielagos.jpg" alt="">
+  </article>
+  <div class="col-md-5">
+  <p class="parrafos_plagas">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eius eos modi, quisquam excepturi ut labore consequuntur et pariatur, debitis ullam velit quod voluptates perspiciatis. Qui rerum placeat possimus corrupti.</p>
+
+  </div>
+</div>
+</div>
+<!-- TERMINA 2DA SECTION====================================================== -->
+
 
  
-</div>
 <footer class="footer">
   
   <p class="parrafo_footer">JGdesinfecciones - Todos los derechos reservados- <a href=""> info@JGDESINFECCIONES.COM.ARS</a></p>
