--- a/empresa.html
+++ b/empresa.html
@@ -7,10 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/pruebacss.css">
     <title>empresa</title>
   </head>
   <body>
+
+
+
  <!-- INICIA NAV========================== -->
  <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
     <div class="container-fluid">
@@ -47,6 +50,9 @@
     </div>
   </nav>
 <!-- TERMINA NAV================================= -->
+
+
+
 <div class="container">
 <div class="row py-4">
 <div class="col-md-8">
@@ -85,18 +91,18 @@
 </div>
 </div>
 
-<div class="flex">
+<div class="flex w-100">
   <div>
-    <img src="img/servicio.png" alt="" class="logo_flex">
+    <img src="img/servicio.png" alt="" class="logo_flex w-100">
      <h6>Servicios</h6>
   </div>
   <div>
-   <img src="img/vehiculos.png" alt="" class="logo_flex">
+   <img src="img/vehiculos.png" alt="" class="logo_flex w-100">
    <h6>Vehiculos</h6>
   </div>
   <div>
    
-    <img src="img/servicios_personales.png" alt="" class="logo_flex">
+    <img src="img/servicios_personales.png" alt="" class="logo_flex w-100">
       <h6>Servicios personales</h5>
   </div>
 
