--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -7,10 +7,13 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/pruebacss.css">
     <title>fumigaciones</title>
   </head>
   <body>
+
+
+
    <!-- INICIA NAV========================== -->
    <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
     <div class="container-fluid">
@@ -47,6 +50,9 @@
     </div>
   </nav>
 <!-- TERMINA NAV================================= -->
+
+
+
 
 <div class="row">
 
