--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/pruebacss.css">
     <title>JGDESINFECCIONES</title>
   </head>
   <body>
    
+
     <!-- INICIA NAV========================== -->
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
-          <a class="navbar-brand " href="index.html "> <img src="img/logo.png" alt="" w-100></a>
+          <a class="navbar-brand " href="index.html "> <img src="img/logo.png" alt="" class="logo_jg"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,8 +26,8 @@
               <li class="nav-item px-3">
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+              <li class="nav-item px-3 ">
+                <a class="nav-link " href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item px-3">
                 <a class="nav-link" href="empresa.html">Empresa</a>
@@ -54,39 +56,46 @@
 
 
  <!-- EMPIEZA CAROUSEL============================================ -->
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/carrousel_uno.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="img/carrousel_dos.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="img/unplash3.jpg" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+ <div id="carouselExampleIndicators"class="carousel slide"   class="alturaCarruosel"   data-bs-ride="carousel">
+  <div class="carousel-indicators  ">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/carrousel-1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/carrousel_jpgdos." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/fumigacion5.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 <!-- TERMINA CAROUSEL================================================ -->
+
+
 
 <!-- EMPIEZA SECTION=========================================== -->
    
 <!-- TERMINA SECTION============================================== -->
 
 
-<div class="container">
+<div class="container inicio">
 <section class="main-row py-4">
    <article>
       <h2 class="titulos">Desinfecciones en Cordoba </h2>
-      <p class="parrafo">En JGDESINFECCIONES, como empresa de desinfecciones en Córdoba, llevamos a cabo todo tipo de servicios relacionados como asesoramiento; tratamientos de desratización; desinsectación; legionella; tratamientos de la madera; limpieza y desinfección de alcantarillado; conductos de aire acondicionado; edificios de oficinas (interior y exteriores); limpieza de fin de obras, eliminación de graffitis, medios de transporte y vehículos a domicilio, entre otros.
+      <p class="parrafo_inicio">En JGDESINFECCIONES, como empresa de desinfecciones en Córdoba, llevamos a cabo todo tipo de servicios relacionados como asesoramiento; tratamientos de desratización; desinsectación; legionella; tratamientos de la madera; limpieza y desinfección de alcantarillado; conductos de aire acondicionado; edificios de oficinas (interior y exteriores); limpieza de fin de obras, eliminación de graffitis, medios de transporte y vehículos a domicilio, entre otros.
         Somos también distribuidores de sistemas de higiene, bacteriostáticos, contenedores de higiene femenina, purificadores de aire y sistemas de ozono, desengrasantes, detergentes, ambientadores y celulosa, entre otros. Ofrecemos nuestros productos y servicios tanto para particulares como para todo tipo de empresas y negocios, como los de hostelería, lavanderías o limpieza de vehículos.</p>
    </article>
   </section>
@@ -94,7 +103,7 @@
   <div class="row">
    <div class="col-md-8 py-3">
      <h2 class="titulos">Expertos en desinfecciones</h2>
-     <p class="parrafo">Para la seguridad de las personas que se encuentran en un espacio, ya sea viviendo, trabajando o simplemente de paso, es fundamental el mantenimiento de un correcto nivel de higiene y limpieza. En el caso de las empresas, a lo anterior se le suma el impacto económico, puesto que las condiciones de higiene y limpieza que se dan en el desarrollo de la actividad de un negocio repercuten directa o indirectamente en sus resultados a través de diversos factores; como la productividad de los empleados, el correcto funcionamiento y mantenimiento de equipos y maquinaria, o la calidad del producto o servicio prestado al cliente.
+     <p class="parrafo_inicio">Para la seguridad de las personas que se encuentran en un espacio, ya sea viviendo, trabajando o simplemente de paso, es fundamental el mantenimiento de un correcto nivel de higiene y limpieza. En el caso de las empresas, a lo anterior se le suma el impacto económico, puesto que las condiciones de higiene y limpieza que se dan en el desarrollo de la actividad de un negocio repercuten directa o indirectamente en sus resultados a través de diversos factores; como la productividad de los empleados, el correcto funcionamiento y mantenimiento de equipos y maquinaria, o la calidad del producto o servicio prestado al cliente.
       Como empresa de desinfecciones en Córdoba, sabemos que la mejor manera de obtener resultados óptimos es prestando servicios personalizados que se adapten en cada caso a las circunstancias y necesidades del cliente. Para ello, nuestros técnicos llevan a cabo previamente una inspección del espacio en el que se va a realizar la limpieza y desinfección. A partir de este estudio, elaboramos un plan de acción que se ajuste a las características de las instalaciones y los elementos que se encuentran en ella, seleccionando así las estrategias y productos más eficientes para cada servicio. Todo esto, cumpliendo siempre las normativas sanitarias y garantizando un servicio de máxima calidad.</p>
    </div>
     
@@ -102,10 +111,6 @@
      <img src="/img/fumigacion5.jpg" alt="" class="py-5 px-5 w-100 border border_2">
 
    </div>
-
-   
-  
-  
 
   </div>
 
@@ -115,7 +120,7 @@
 
 
 
-<div class="container py-4">
+<div class="container trabajos py-4 border-top">
   <section class="main row bg-ligth ">
       <article class="col-xs-12 col-sm-4 col-md-9 col-lg py-5 ">
          <a href=""><img src="img/limpieza de tanques icono.png" alt="" class="w-50"></a>  
