--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/pruebacss.css">
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -15,6 +15,10 @@
     <title>limpieza de tanques</title>
   </head>
   <body>
+
+
+
+
     <!-- INICIA NAV========================== -->
     <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
       <div class="container-fluid">
@@ -79,6 +83,9 @@
     </nav>
     <!-- TERMINA NAV================================= -->
 
+
+
+    
     <div class="container">
       <div class="row">
         <div class="col-md-7 px-4 py-4">
