--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -11,7 +11,11 @@
     <title>fumigaciones</title>
   </head>
   <body>
-
+  
+    <div class="top_nav">
+      <p class="color_telefono"><a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> 54-3512002606 </p>
+      <p>   <a href=""><img src="img/reloj.png" alt="" class="reloj"></a>  Lun-vier:8 am-5 am    <a href=""> <img src="img/instagram (2).png" alt="" class="instagram"></a> </p>
+    </div>
 
 
    <!-- INICIA NAV========================== -->
