--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   </head>
   <body>
    
+    <div class="top_nav">
+      <p class="color_telefono"><a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> 54-3512002606 </p>
+      <p>   <a href=""><img src="img/reloj.png" alt="" class="reloj"></a>  Lun-vier:8 am-5 am    <a href=""> <img src="img/instagram (2).png" alt="" class="instagram"></a> </p>
+    </div>
 
     <!-- INICIA NAV========================== -->
     <nav class="navbar navbar-expand-lg navbar-light ">
@@ -56,21 +60,21 @@
 
 
  <!-- EMPIEZA CAROUSEL============================================ -->
- <div id="carouselExampleIndicators"class="carousel slide"   class="alturaCarruosel"   data-bs-ride="carousel">
+ <div id="carouselExampleIndicators"class="carousel slide"  data-bs-ride="carousel">
   <div class="carousel-indicators  ">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
-  <div class="carousel-inner">
+  <div class="carousel-inner" >
     <div class="carousel-item active">
-      <img src="img/carrousel-1.jpg" class="d-block w-100" alt="...">
+      <img src="img/fumigacion (3) (1).jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/carrousel_jpgdos." class="d-block w-100" alt="...">
+      <img src="img/photoshop_2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/fumigacion5.jpg" class="d-block w-100" alt="...">
+      <img src="img/photoshop_3.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -87,14 +91,10 @@
 
 
 <!-- EMPIEZA SECTION=========================================== -->
-   
-<!-- TERMINA SECTION============================================== -->
-
-
-<div class="container inicio">
+   <div class="container">
 <section class="main-row py-4">
    <article>
-      <h2 class="titulos">Desinfecciones en Cordoba </h2>
+      <h2 class="titulos_inicio">Desinfecciones en Cordoba </h2>
       <p class="parrafo_inicio">En JGDESINFECCIONES, como empresa de desinfecciones en Córdoba, llevamos a cabo todo tipo de servicios relacionados como asesoramiento; tratamientos de desratización; desinsectación; legionella; tratamientos de la madera; limpieza y desinfección de alcantarillado; conductos de aire acondicionado; edificios de oficinas (interior y exteriores); limpieza de fin de obras, eliminación de graffitis, medios de transporte y vehículos a domicilio, entre otros.
         Somos también distribuidores de sistemas de higiene, bacteriostáticos, contenedores de higiene femenina, purificadores de aire y sistemas de ozono, desengrasantes, detergentes, ambientadores y celulosa, entre otros. Ofrecemos nuestros productos y servicios tanto para particulares como para todo tipo de empresas y negocios, como los de hostelería, lavanderías o limpieza de vehículos.</p>
    </article>
@@ -102,17 +102,56 @@
 
   <div class="row">
    <div class="col-md-8 py-3">
-     <h2 class="titulos">Expertos en desinfecciones</h2>
+     <h2 class="titulos_inicio">Expertos en desinfecciones</h2>
      <p class="parrafo_inicio">Para la seguridad de las personas que se encuentran en un espacio, ya sea viviendo, trabajando o simplemente de paso, es fundamental el mantenimiento de un correcto nivel de higiene y limpieza. En el caso de las empresas, a lo anterior se le suma el impacto económico, puesto que las condiciones de higiene y limpieza que se dan en el desarrollo de la actividad de un negocio repercuten directa o indirectamente en sus resultados a través de diversos factores; como la productividad de los empleados, el correcto funcionamiento y mantenimiento de equipos y maquinaria, o la calidad del producto o servicio prestado al cliente.
       Como empresa de desinfecciones en Córdoba, sabemos que la mejor manera de obtener resultados óptimos es prestando servicios personalizados que se adapten en cada caso a las circunstancias y necesidades del cliente. Para ello, nuestros técnicos llevan a cabo previamente una inspección del espacio en el que se va a realizar la limpieza y desinfección. A partir de este estudio, elaboramos un plan de acción que se ajuste a las características de las instalaciones y los elementos que se encuentran en ella, seleccionando así las estrategias y productos más eficientes para cada servicio. Todo esto, cumpliendo siempre las normativas sanitarias y garantizando un servicio de máxima calidad.</p>
    </div>
     
-   <div class="col-md-4">
-     <img src="/img/fumigacion5.jpg" alt="" class="py-5 px-5 w-100 border border_2">
+   <div class="col-md-4 py-5">
+     <img src="/img/fumigacion_inicio.jpg" alt="" class="py-5 px-5 w-100 ">
 
    </div>
 
   </div>
+
+</div>
+<!-- TERMINA SECTION============================================== -->
+
+
+
+<!-- EMPIEZA 2DA SECTION=============================================== -->
+  
+<section class="section_dos">
+<div class="container">
+  <section>
+<h2 class="titulos_inicio">Metodologia</h2>
+<h4 class="subtitulos">Inspeccion</h4>
+<p class="parrafo_inicio">Se realiza una minuciosa inspección en el lugar. De esta manera podremos identificar correctamente:</p>
+<ul class="parrafo_inicio">
+  <li>Tipo de roedor</li>
+  <li>Magnitud estimada de la población</li>
+  <li>Vías de ingreso/egreso</li>
+  <li>Vías de circulación</li>
+  <li>Daños ocasionados</li>
+  <li>PCC puntos críticos de control</li>
+</ul>
+</section>
+
+
+<div>
+<h4 class="subtitulos">Diagnostico</h4>
+<p class="parrafo_inicio">Con la información obtenida en la inspección, se realiza el correspondiente diagnóstico de la situación. El mismo se entregara en un informe escrito en donde se detallará el estado de situación actual del lugar, los motivos por los cuales se ha llegado a esa situación, un programa pormenorizado de trabajo a llevar a cabo y una estimación de los tiempos necesarios para llegar a una solución.</p>
+<h4 class="subtitulos">Control</h4>
+<p class="parrafo_inicio">El control, en la desratización, conjuga varias técnicas. En los lugares donde sea posible podrán utilizarse cebos monodosicos en forma de bloques parafinados o pellets.
+
+  En sectores sensibles se utilizara sistema de monitoreo de roedores, mediante cajas cerradas e identificadas. En este aspecto se podrá utilizar placas engomadas y/o jaulas de captura viva.
+  
+  Una vez armado el sistema de monitoreo se confeccionará un plano de ubicación de las estaciones.
+  
+  Se contemplará el asesoramiento necesario para realizar todas las tareas de exclusión y poder evitar de esta manera que sigan ingresando roedores.
+  Recuerda que la desratización y el control de roedores debe estar siempre en manos de profesionales, esto garantizará una adecuada solución, minimizando los riesgos.</p>
+
+</div>
 
 </div>
 
@@ -120,23 +159,33 @@
 
 
 
+
+
+
+
+
+<!-- TERMINA 2DA SECTION========================================== -->
+
+
+
+
 <div class="container trabajos py-4 border-top">
   <section class="main row bg-ligth ">
       <article class="col-xs-12 col-sm-4 col-md-9 col-lg py-5 ">
-         <a href=""><img src="img/limpieza de tanques icono.png" alt="" class="w-50"></a>  
+         <a href=""><img src="img/limpieza de tanques icono.png" alt="" class="logo_inicio"></a>  
           <h5>  Limpieza de tanques </h5>
       </article>
       <article class="col-xs-12 col-sm-4 col-md-3 col-lg py-3">
-       <a href="">  <img src="img/control de plagas icono.png" alt="" class="w-50"></a>   
+       <a href="">  <img src="img/control de plagas icono.png" alt="" class="logo_inicio"></a>   
           <h5>  Control de plagas </h5>
       </article>
       <article class="col-xs-12 col-sm-8 col-md-9 col-lg py-3">
-     <a href=""> <img src="img/seguridad contra incendios logo.png" alt="" class="w-50"></a>    
+     <a href=""> <img src="img/seguridad contra incendios logo.png" alt="" class="logo_inicio"></a>    
          <h5> seguridad contra incendios </h5>
       </article>
   
       <article class="col-xs-12  col-sm-8 col-md-9 col-lg py-3">
-      <a href=""><img src="img/limpieza profunda icono.png" alt="" class="w-50"></a>   
+      <a href=""><img src="img/limpieza profunda icono.png" alt="" class="logo_inicio"></a>   
           <h5> Limpieza profunda </h5>
   
       </article>
