--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,14 @@
     <title>contacto</title>
   </head>
   <body>
+
+
+    <div class="top_nav">
+      <p class="color_telefono"><a href=""> <img src="img/telefono.png" alt="" class="telefono"></a> 54-3512002606 </p>
+      <p>   <a href=""><img src="img/reloj.png" alt="" class="reloj"></a>  Lun-vier:8 am-5 am    <a href=""> <img src="img/instagram (2).png" alt="" class="instagram"></a> </p>
+    </div>
+
+
     <!-- INICIA NAV========================== -->
     <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
       <div class="container-fluid">
@@ -82,11 +90,21 @@
     </nav>
     <!-- TERMINA NAV================================= -->
 
+
+
+   <div class="imagen">
+    <img src="img/contactanos_dos.jpg" alt="" class="w-100">
+   </div>
+   
+
+
+
+
     <!-- INICIA FORMULARIO============================================= -->
 
     <div class="conteiner">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 py-5">
           <form>
             <h2 class="py-3">Contactanos</h2>
             <div class="mb-3">
@@ -113,6 +131,14 @@
                 id="exampleInputPassword1"
               />
             </div>
+             
+            <div class="mensaje">
+            
+              <textarea name="mensaje" id="" cols="30" rows="10" placeholder="Escriba aqui su mensaje"></textarea>
+            </div>
+
+
+
             <div class="mb-3 form-check">
               <input
                 type="checkbox"
@@ -127,8 +153,8 @@
           </form>
         </div>
 
-        <div class="col-md-6">
-          <iframe
+        <div class="col-md-6 py-5">
+          <iframe 
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.1293139388367!2d-64.26771698485203!3d-31.41056308140603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329f402ff5df45%3A0x65720f6d8796fd8!2sJG%20Desinfecci%C3%B3nes!5e0!3m2!1ses-419!2sar!4v1648922553547!5m2!1ses-419!2sar"
             width="600"
             height="450"
@@ -137,7 +163,7 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
             class=""
-          ></iframe>
+         class="w-100" > </iframe>
         </div>
       </div>
     </div>
