--- a/empresa.html
+++ b/empresa.html
@@ -58,7 +58,7 @@
 
 
 
-<div class="container">
+<div class="container border-bottom border-top">
 <div class="row py-4">
 <div class="col-md-8">
   <p class="parrafo">En 1975 nacía un proyecto, JGDESINFECCIONES, inicialmente focalizado en la prestación de servicios de control de plagas para particulares, empresas y Administración Pública, que día de hoy ha evolucionado hacia un concepto multiservicio en el ámbito de la Sanidad Ambiental y Salubridad en sus distintas modalidades.
@@ -96,21 +96,27 @@
 </div>
 </div>
 
-<div class="flex w-100">
-  <div>
-    <img src="img/servicio.png" alt="" class="logo_flex w-100">
+<div class="container_servicios">
+  <div class="row">
+<div class="col-md-3">
+    <img src="img/vehiculo.png" alt="" class="logos_empresa">
      <h6>Servicios</h6>
   </div>
-  <div>
-   <img src="img/vehiculos.png" alt="" class="logo_flex w-100">
+  <div class="col-md-3">
+   <img src="img/servicios.png" alt="" class="logos_empresa">
    <h6>Vehiculos</h6>
   </div>
-  <div>
+  <div class="col-md-3">
    
-    <img src="img/servicios_personales.png" alt="" class="logo_flex w-100">
+    <img src="img/encargados.png" alt="" class="logos_empresa ">
       <h6>Servicios personales</h5>
   </div>
+  <div class="col-md-3">
+    <img src="img/turnos.png" alt="" class="logos_empresa">
+    <h6>turnos</h6>
+  </div>
 
+  </div>
 </div>
 
 <div class="garantia">
