--- a/control-de-plagas.html
+++ b/control-de-plagas.html
@@ -55,12 +55,14 @@
 <!-- TERMINA NAV================================= -->
 
 
-<!-- 1RA SECTION?==================================================================== -->
+
+
+<!-- 1RA SECTION==================================================================== -->
 <div class="container">
   <div class="row py-4 border-bottom ">
 
     <div class="col-md-6">
-      <img src="img/control de plagas.jpg" alt="" class="w-100 border border-dark">
+      <img src="img/control_plagas.jpg" alt="" class="w-100 border border-dark">
     </div>
 
     <div class="col-md-6">
@@ -68,65 +70,151 @@
       <h2 class="titulo_principal_plagas">Que es una plaga</h2>
          <p class="parrafo_principal_plagas">Se llama plaga a cualquier ser vivo que resulta perjudicial para otro ser vivo, generalmente cuando este es de interés para el ser humano. Existen plagas de interés sanitario, tales como los vectores de enfermedades humanas — y animales, tales como, mosquitos, pulgas o garrapatas, y las plagas agrícolas que afectan las plantas cultivadas, así como las cosechas, ya sean frescas o almacenadas.</p>
     </div>
+  </div>
+</div>
+<!-- TERMINA 1RA SECTION================================ -->
 
 
 
-
+<!-- EMPIEZA 2DA SECTION======================================== -->
+<div class="container border-top py-5">
+  <div class="row">
+    <div class="col-md-4"> 
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="img/desinzectacion.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h6 class="card-title">DESINSECTACIÓN</h6>
+              <p class="card-text">La tranquilidad y salud en su hogar es el producto de un estricto control de insectos y plagas que pueden transmitir enfermedades. Considere inmediatamente comunicarse con una empresa de exterminación de plagas para la fumigación de casas ante la presencia de cucarachas, chinches, moscas, entre otras.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="img/desratizacion.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h6 class="card-title">DESRATIZACIÓN</h6>
+              <p class="card-text">Aunque no lo parezca, el control de ratas es unas de los servicios más solicitados. La plaga de ratones no será como lo ocurrido Hamelín, pero está presente hasta en los lugares menos imaginados. Un exterminador de ratas especializado podrá dar una solución efectiva a su problema con roedores.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="img/sanitizacion.png" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h6 class="card-title">SANITIZACIÓN</h6>
+              <p class="card-text">Mantener una constante limpieza y desinfección asegura a su negocio tener espacios libres de bacterias, hongos y virus, principales contaminantes de alimentos. Nuestra empresa provee el servicio de sanitización para asegurar un completo cronograma de limpieza y desinfección.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="col-md-3">
+      <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="..." class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h6 class="card-title">Card title</h6>
+              <p class="card-text">.</p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
   </div>
-
-  
-
-  
 </div>
+    
+<!-- TERMINA 2DA SECTION======================================== -->
 
-<!-- 2DA SECTION================================================================== -->
+
+
+
+
+
+
+
+
+<!-- 3RA SECTION================================================================== -->
+  
 <div class="container">
-<div class="row ">
-<article class="col-md-7 px-5">
-  <h4>Hormigas</h4>
-  <img src="img/hormigas.jpg" alt="">
-</article>
-<div class="col-md-5 py-5 px-5">
-  <p class="parrafos_plagas">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eius eos modi, quisquam excepturi ut labore consequuntur et pariatur, debitis ullam velit quod voluptates perspiciatis. Qui rerum placeat possimus corrupti.</p>
-</div>
+  <div class="row">
+    <h3 class="subtitulos_plagas">Desinfección</h3>
+     <p>La desinfección es una técnica de saneamiento que tiene como finalidad la destrucción de bacterias, virus y hongos que perjudican la salud del hombre y su hábitat. Al eliminarlos se evitan infecciones, contagios y malos olores.
 
-</div>
-<div class="row px-5">
-<article class="col-md-7">
-  <h4>Cucarachas</h4>
-  <img src="img/cucarachas 2.jpg" alt="">
-</article>
-<div class="col-md-5">
-  <p class="parrafos_plagas">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eius eos modi, quisquam excepturi ut labore consequuntur et pariatur, debitis ullam velit quod voluptates perspiciatis. Qui rerum placeat possimus corrupti.</p>
+      Se los combate mediante la utilización de desinfectantes de amplio espectro y prolongada acción residual.
+      
+      Principales Ventajas de la Desinfección.</p>
+      <ul>
+        <li>Elimina todos los microorganismos, incluso los más resistentes.</li>
+        <li>Prolongado efecto residual. * No mancha.</li>
+        <li>No provoca alergias. * Inodora e insípida.
+          Métodos de aplicación.</li>
+      </ul>
 
-</div>
-</div>
-<div class="row px-5">
-  <article class="col-md-7">
-  <h4>Alcranes</h4>
-  <img src="img/alacranes.jpg" alt="">
-  </article>
-  <div class="col-md-5">
-  <p class="parrafos_plagas">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eius eos modi, quisquam excepturi ut labore consequuntur et pariatur, debitis ullam velit quod voluptates perspiciatis. Qui rerum placeat possimus corrupti.</p>
+      <h3 class="subtitulos_plagas">Metodos de Aplicacion</h3>
+      <p>La desinfección ambiental se realiza con moto pulverizadores de ULTRA BAJO VOLUMEN, que generan una nube de gotas micronizadas de desinfectante. Esta nube garantiza gran eficacia y penetración; además permite la distribución y coberturas de las superficies imposibles de lograr mediante otro tipo de rociado.</p>
+      <p>No afecta las superficies tratadas y su rango de toxicidad para el hombre es prácticamente nulo. Los productos a utilizar son efectivos contra agentes bacterianos (Clostridium spp, Salmonella enteriditis, Micoplasma, Escherichia coli), agentes virales (Adenovirus, Herpes, Bronquitis, Nuemovirus), agentes fúngicos (Aspergillus, Coccidios).
+        La desinfección es aconsejable para lugares de riesgo como gimnasios, clínicas, oficinas, vestuarios, baños, etc.
+      </p>
 
+      <h3 class="subtitulos_plagas">Desinsectación</h3>
+      <p>La Desinsectación es una técnica de saneamiento que tiene como finalidad el control de insectos rastreros y voladores que perjudican la salud y afectan la calidad de vida del hombre.</p>
+      <p>Cada plaga debe ser tratada de manera particular según sus características.
+
+        Existe una gran variedad de técnicas de aplicación, dependen de la superficie de las zonas a tratar, de la dificultad de acceso, o si la desinsectación se efectuará en lugares al aire libre o cerrados.</p>
   </div>
-</div>
-<div class="row px-5">
-  <article class="col-md-7">
-  <h4>Murcielagos</h4>
-  <img src="img/murcielagos.jpg" alt="">
-  </article>
-  <div class="col-md-5">
-  <p class="parrafos_plagas">Lorem ipsum dolor sit amet consectetur adipisicing elit. At eius eos modi, quisquam excepturi ut labore consequuntur et pariatur, debitis ullam velit quod voluptates perspiciatis. Qui rerum placeat possimus corrupti.</p>
 
-  </div>
 </div>
-</div>
-<!-- TERMINA 2DA SECTION====================================================== -->
 
 
+
+
+<!-- TERMINA 3RA SECTION====================================================== -->
  
+<div class="garantia">
+  <img src="img/logo_garantia.png" alt="" class="logo_garantia">
+  <p class="parrafo_calidad">CALIDAD GARANTIZADA</p>
+ </div>
+
+
+
+
+
+
+
+<!-- EMPIEZA 4TA SECTION==================================================== -->
+ <div class="tercera_section">
+   <p class="parrafo_tercera_section">Manejo Integrado De Plagas</p>
+ </div>
+<!-- TERMINA 4TA SECTION================================================ -->
+
+
+
+
+
 <footer class="footer">
   
   <p class="parrafo_footer">JGdesinfecciones - Todos los derechos reservados- <a href=""> info@JGDESINFECCIONES.COM.ARS</a></p>
