--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
   </div>
   <div class="carousel-inner" >
     <div class="carousel-item active">
-      <img src="img/fumigacion (3) (1).jpg" class="d-block w-100" alt="...">
+      <img src="img/carrousel-1 (2).jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/photoshop_2.jpg" class="d-block w-100" alt="...">
+      <img src="img/carrousel-2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/photoshop_3.png" class="d-block w-100" alt="...">
+      <img src="img/carrousel-3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -167,11 +167,37 @@
 <!-- TERMINA 2DA SECTION========================================== -->
 
 
+<!-- EMPIEZA 3RA SECTION -->
+
+<div class="container py-5 border-top">
+  <div class="row">
+    <div class="col-md-6">     
+       <img src="img/asesoramiento.jpg" alt="" class="w-100">   
+      </div>
+    <div class="col-md-6">
+    <h2 class="subtitulos">Asesoramiento</h2>
+    <p>Nuestro equipo de Asesores, en función del tipo de industria o institución, tamaño, cantidad de personal, actividad, etc.; realiza un análisis profundo “In Situ” de cada situación y en base al mismo recomienda el protocolo de desinfección apropiado para cada cliente; los cual genera:</p>
+    <ul>
+      <li>Procesos de desinfección acordes a la real necesidad de cada industria.</li>
+      <li>Seguridad y cuidado garantizado para empelados y clientes.</li>
+      <li>Uso racionalizado de insumos, evitando gastos por ineficiencias de aplicación.</li>
+      <li>Reducción de costos por eliminación de paradas de planta, ausencias de personal o empleo de insumos de forma indiscriminada (e ineficiente).</li>
+    </ul>
+    </div>
+
+  </div>
+
+</div>
+
+
+<!-- TERMINA 3RA SECTION -->
+
+
 
 
 <div class="container trabajos py-4 border-top">
   <section class="main row bg-ligth ">
-      <article class="col-xs-12 col-sm-4 col-md-9 col-lg py-5 ">
+      <article class="col-xs-12 col-sm-4 col-md-9 col-lg py-4 ">
          <a href=""><img src="img/limpieza de tanques icono.png" alt="" class="logo_inicio"></a>  
           <h5>  Limpieza de tanques </h5>
       </article>
@@ -195,7 +221,7 @@
 <footer class="footer">
   
   <p class="parrafo_footer">JGdesinfecciones - Todos los derechos reservados- <a href=""> info@JGDESINFECCIONES.COM.ARS</a></p>
-<p class="parrafo_footer"> <a href="">312002606</a> </p>
+<p class="parrafo_footer"> <a href="">3512002606</a> </p>
 </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
