--- a/empresa.html
+++ b/empresa.html
@@ -57,7 +57,7 @@
 <!-- TERMINA NAV================================= -->
 
 
-
+  <!-- COMIENZA HEADER -->
 <div class="container border-bottom border-top">
 <div class="row py-4">
 <div class="col-md-8">
@@ -67,57 +67,20 @@
 <div class="col-md-4">
   <img src="img/jgdesinfecciones.jpg" alt="" class="img_empresa">
 </div>
-
 </div>
 </div>
+<!-- TERMINA HEADER========== -->
 
-<div class="container_dos py-3">
-<div class="row Hantavirus ">
-  <div class="col-md-3 py-4  px-4">
-  <h3 class="titulos_empresa">Nuestro objetivos</h3>
-    <p class="p">Contribuir al bienestar de nuestros clientes y del medio ambiente, solucionando con rapidez y eficacia los problemas de plagas urbanas, ofreciendo servicios profesionales de Manejo Integral de Plagas.</p>
-  </div>
-  <div class="col-md-3 px-4 py-4">
-    <h3 class="titulos_empresa">Nuestros valores</h3>
-    <p class="p">JGDESINFECCIONES se caracteriza en el mercado por realizar sus servicios con absoluta seriedad, idoneidad, confianza, profesionalismo, honradez, honestidad y responsabilidad.
+<!-- COMIENZA MAIN -->
 
-    </p>
-  </div>
-  <div class="col-md-3 px-4 py-4">
-    <h3 class="titulos_empresa">Hantavirus</h3>
-    <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, nostrum dicta facere odit pariatur aut totam expedita. Quam, animi voluptas accusantium a id repellat incidunt repellendus aliquid nostrum, numquam laudantium!</p>
-  </div>
-
-  <div class="col-md-3 px-4  py-4">
-    <h3 class="titulos_empresa">Nuestra vision</h3>
-    <p class="p">Es ser la empresa líder a nivel nacional en el manejo Integral de Plagas Urbanas, mantener el reconocimiento de nuestros clientes como una empresa seria, profesional, comprometida y con alta calidad de servicio.!</p>
-  </div>
-
-</div>
-</div>
-
-<div class="container_servicios">
+<div class="container">
   <div class="row">
-<div class="col-md-3">
-    <img src="img/vehiculo.png" alt="" class="logos_empresa">
-     <h6>Servicios</h6>
-  </div>
-  <div class="col-md-3">
-   <img src="img/servicios.png" alt="" class="logos_empresa">
-   <h6>Vehiculos</h6>
-  </div>
-  <div class="col-md-3">
-   
-    <img src="img/encargados.png" alt="" class="logos_empresa ">
-      <h6>Servicios personales</h5>
-  </div>
-  <div class="col-md-3">
-    <img src="img/turnos.png" alt="" class="logos_empresa">
-    <h6>turnos</h6>
-  </div>
-
+    <div>  <img src="img/sobre-nosotros.jpg" alt="" class="w-100"> </div>
+    <div> <p></p> </div>
   </div>
 </div>
+<!-- TERMINA MAIN -->
+
 
 <div class="garantia">
  <img src="img/logo_garantia.png" alt="" class="logo_garantia">
