--- a/fumigaciones.html
+++ b/fumigaciones.html
@@ -57,25 +57,27 @@
 
 
 
-
+<div class="container">
 <div class="row">
 
    <h2 class="titulo_fumigacion">FUMIGACION</h2>
   <div class="col-md-7 px-5"> 
-  <img src="img/desinfectar.jpg" alt="">
+  <img src="img/fumigation.jpg" alt="" class="w-100">
   </div>
 
 
   <div class="col-md-5 px-5 py-5">
-    <h6>¿QUE ES UNA FUMIGACION?</h6>
+    <h5 class="subtitulos_fumigacion">¿QUE ES UNA FUMIGACION?</h5>
     <p>La fumigación es un tratamiento de control de plagas basado en el uso de fumigantes. Un fumigante es un agente químico que, a temperatura y presión normales, se encuentra en forma gaseosa y que puede mantenerse a una concentración suficiente para eliminar las plagas.</p>
   </div>
 
 </div>
+</div>
 
-<div class="row">
+<div class="container">
+<div class="row border-top">
   <div class="col-md-12 px-5 py-5">
-  <h6>¿PARA QUE SIRVE?</h6>
+  <h5 class="subtitulos_fumigacion">¿PARA QUE SIRVE?</h5>
   <p class="parrafo_fumigacion">La fumigación, se hace a partir del uso de agroquímicos, pesticidas, productos químicos o bioinsumos (nuestros preferidos), que se esparcen desde un avión o se aplican de otro modo como fumigadoras de espalda, tractores o equipos especiales para fumigar con la finalidad de prevenir, controlar, repeler o destruir las plagas o enfermedades presentes que pueden afectar a las plantas, los cultivos y por ende las cosechas.
 
     En la agricultura, el uso masivo de agroquímicos y plaguicidas en fumigaciones para la protección de cultivos, se inició a partir de la década de 1980, cuando varias empresas de la agroindustria desarrollaron productos para el control de plagas y enfermedades en cultivos de gran efectividad y costo accesible para él agricultor. Esto ha permitido proteger los cultivos de una manera más eficiente. Sin embargo, en el largo plazo, el uso intenso y sin control de pesticidas, puede provocar daños en el medio ambiente, las personas e incluso puede pasar que algunas plagas se vuelvan resistentes.
@@ -86,6 +88,8 @@
 </div>
 
 </div>
+</div>
+
 
 
 <div class="row">
