--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
           <a class="navbar-brand " href="index.html "> <img src="img/logo.png" alt="" class="logo_jg"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+          <button class="navbar-toggler   type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon "></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
               <li class="nav-item px-3">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active " aria-current="page" href="index.html">Home</a>
               </li>
-              <li class="nav-item px-3 ">
+              <li class="nav-item px-3">
                 <a class="nav-link " href="contacto.html">Contacto</a>
               </li>
               <li class="nav-item px-3">
@@ -68,10 +68,10 @@
   </div>
   <div class="carousel-inner" >
     <div class="carousel-item active">
-      <img src="img/carrousel-1 (2).jpg" class="d-block w-100" alt="...">
+      <img src="img/carrousel-1 (2).jpg" class="d-block w-100" alt="desinfecciones,fumigacion">
     </div>
     <div class="carousel-item">
-      <img src="img/carrousel-2.jpg" class="d-block w-100" alt="...">
+      <img src="img/carrousel-2.jpg" class="d-block w-100" alt="">
     </div>
     <div class="carousel-item">
       <img src="img/carrousel-3.jpg" class="d-block w-100" alt="...">
