--- a/limpieza-de-tanques.html
+++ b/limpieza-de-tanques.html
@@ -95,7 +95,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7 px-4 py-4">
-          <h3 class="subtitulos_tanques">Limpieza de tanques de agua</h3>
+          <h2 class="subtitulos_tanques">Limpieza de tanques de agua</h2>
           <p class="parrafo">
             JGDESINFECCIONES recuerda la conveniencia de realizar una limpieza
             periódica y adecuada de las cisternas y los tanques de
@@ -128,8 +128,8 @@
     </div>
       
     <div class="col-md-6">
-      <h3 class="subtitulos_tanques">Inspeccion sanitaria</h3>
-      <p>Las precauciones mínimas que se deben tomar en cuanto a la seguridad del tanque domiciliario de agua potable con el propósito que el agua contenida en el mismo no altere sus condiciones de potabilidad son las siguientes:</p>
+      <h2 class="subtitulos_tanques">Inspeccion sanitaria</h2>
+      <p class="parrafo">Las precauciones mínimas que se deben tomar en cuanto a la seguridad del tanque domiciliario de agua potable con el propósito que el agua contenida en el mismo no altere sus condiciones de potabilidad son las siguientes:</p>
       <ul>
         <li>El tanque debe contar con su correspondiente tapa debidamente ubicada, sin roturas ni rajaduras.</li>
         <li>Se recomienda verificar el estado sanitario del tanque al menos cada 6 (seis) meses.</li>
